--- a/servicios.html
+++ b/servicios.html
@@ -65,10 +65,9 @@
     <footer class="footer bg-dark bg-gradient fixed bottom">
         <h5>Copyright - Todos los derechos reservados</h5>
         <p>Seguinos en nuestras redes</p>
-        <a href="contacto.html">Facebook</a>
-        <a href="contacto.html">Linkedin</a>
-        <a href="contacto.html">Instagram</a>
-        <a href="contacto.html">YouTube</a>
+        <a href="contacto.html"><img src="./img/facebook.png" alt=""></a>
+        <a href="contacto.html"><img src="./img/instagram.jpg" alt=""></a>
+        <a href="contacto.html"><img src="./img/mail.png" alt=""></a>
     </footer>
     <script src="./js/wow.js"></script>
     <script>
