--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                                 Servicios
                             </a>
                             <ul class="dropdown-menu bg-secondary bg-gradient" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item text-dark" href="#">Residencial</a></li>
-                                <li><a class="dropdown-item text-dark" href="#">Industrial</a></li>
-                                <li><a class="dropdown-item text-dark" href="#">Refacciones</a></li>
-                                <li><a class="dropdown-item text-dark" href="#">Infraestructura</a></li>
-                                <li><a class="dropdown-item text-dark" href="#">Institucional</a></li>
+                                <li><a class="dropdown-item text-dark" href="./servicios.html">Residencial</a></li>
+                                <li><a class="dropdown-item text-dark" href="./servicios.html">Industrial</a></li>
+                                <li><a class="dropdown-item text-dark" href="./servicios.html">Refacciones</a></li>
+                                <li><a class="dropdown-item text-dark" href="./servicios.html">Infraestructura</a></li>
+                                <li><a class="dropdown-item text-dark" href="./servicios.html">Institucional</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
